# Codex-Claude-Windows-Taskbar

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: diagnose.rs  poller.rs  updater.rs  window.rs
src/localization/: english.rs
